# agent-safety-middleware

./: README.md  pyproject.toml
agent_safety_middleware/: __init__.py  decorator.py  fastapi_middleware.py  flask_middleware.py  guard.py
agent_safety_middleware.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_decorator.py  test_fastapi.py  test_flask.py  test_guard.py
